pwrp-interface-orig/rt_mh_net_h.ads

pragma Ada_2005;
pragma Style_Checks (Off);

with Interfaces.C; use Interfaces.C;
with pwr_h;
with rpc_types_h;
with co_platform_h;
with rt_net_h;
with rt_qcom_h;
limited with rpc_xdr_h;

package rt_mh_net_h is


   mh_cMsgClass : constant := 201;  --  rt_mh_net.h:58
   mh_cVersion : constant := 4;  --  rt_mh_net.h:59
   mh_cProcHandler : constant := 111;  --  rt_mh_net.h:60
   --  unsupported macro: mh_cProcAllHandlers qcom_cQmhAllHandlers
   --  unsupported macro: mh_cProcAllOutunits qcom_cQmhAllOutunits

   mh_cSendRcvTmo : constant := 200;  --  rt_mh_net.h:63

   mh_mEventStatus_NotRet : constant := (2 ** 0);  --  rt_mh_net.h:67
   mh_mEventStatus_NotAck : constant := (2 ** 1);  --  rt_mh_net.h:68
   mh_mEventStatus_Block : constant := (2 ** 2);  --  rt_mh_net.h:69

  -- * Please do not edit this file.
  -- * It was generated using rpcgen.
  --  

  -- 
  -- * Proview   $Id: rt_mh_net.x,v 1.5 2008-01-24 09:58:41 claes Exp $
  -- * Copyright (C) 2005 SSAB Oxelösund AB.
  -- *
  -- * This program is free software; you can redistribute it and/or 
  -- * modify it under the terms of the GNU General Public License as 
  -- * published by the Free Software Foundation, either version 2 of 
  -- * the License, or (at your option) any later version.
  -- *
  -- * This program is distributed in the hope that it will be useful 
  -- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
  -- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
  -- * GNU General Public License for more details.
  -- *
  -- * You should have received a copy of the GNU General Public License 
  -- * along with the program, if not, write to the Free Software 
  -- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  --  

  -- Bit masks  
   subtype mh_mEventStatus is pwr_h.pwr_tUInt32;  -- rt_mh_net.h:72

  --* 
  -- * @ingroup MSGH_DS
  -- * @brief Type of event that the message handler recognizes.
  --  

   subtype mh_eEvent is unsigned;
   mh_eEvent_u_u : constant mh_eEvent := 0;
   mh_eEvent_Ack : constant mh_eEvent := 1;
   mh_eEvent_Block : constant mh_eEvent := 2;
   mh_eEvent_Cancel : constant mh_eEvent := 3;
   mh_eEvent_CancelBlock : constant mh_eEvent := 4;
   mh_eEvent_Missing : constant mh_eEvent := 5;
   mh_eEvent_Reblock : constant mh_eEvent := 6;
   mh_eEvent_Return : constant mh_eEvent := 7;
   mh_eEvent_Unblock : constant mh_eEvent := 8;
   mh_eEvent_Info : constant mh_eEvent := 32;
   mh_eEvent_Alarm : constant mh_eEvent := 64;
   mh_eEvent_u : constant mh_eEvent := 65;  -- rt_mh_net.h:78

  --* 
  -- * @ingroup MSGH_DS
  -- * @brief Event prio
  -- *
  -- * This enumeration defines the priority of the event. 
  -- * This affects how the message handler treats the generated message. 
  -- * For A and B priorities the alarm window displays number of alarms, 
  -- * number of unacknowledged alarms, identities of the alarms, and associated 
  -- * message texts. For C and D priorities, only number of alarms and number of 
  -- * unacknowledged alarms are shown. 
  -- * @param mh_eEventPrio_A Priority A, the highest priority. 
  -- * Alarm messages of this priority are shown in the upper part of the alarm window. 
  -- * @param mh_eEventPrio_B Priority B. 
  -- * These messages are shown in the lower part of the alarm window. 
  -- * @param mh_eEventPrio_C Priority C. 
  -- * @param mh_eEventPrio_D Priority D. This is the lowest priority. 
  --  

   subtype mh_eEventPrio is unsigned;
   mh_eEventPrio_u_u : constant mh_eEventPrio := 0;
   mh_eEventPrio_A : constant mh_eEventPrio := 67;
   mh_eEventPrio_B : constant mh_eEventPrio := 66;
   mh_eEventPrio_C : constant mh_eEventPrio := 65;
   mh_eEventPrio_D : constant mh_eEventPrio := 64;
   mh_eEventPrio_u : constant mh_eEventPrio := 63;  -- rt_mh_net.h:111

  --* 
  -- * @ingroup MSGH_DS
  -- * @brief Type of supervision data.
  -- * 
  -- * This enumeration is used to indicate what kind of data is supplied 
  -- * in an application message (See mh_sApplMessage).
  -- * @param  mh_eSupType_Digital Digital supervision data
  -- * @param  mh_eSupType_Analog Analog supervision data 
  -- * @param  mh_eSupType_Link   ZZZ
  -- * @param  mh_eSupType_Cycle  ZZZ
  --  

   subtype mh_eSupType is unsigned;
   mh_eSupType_u_u : constant mh_eSupType := 0;
   mh_eSupType_Digital : constant mh_eSupType := 1;
   mh_eSupType_Analog : constant mh_eSupType := 2;
   mh_eSupType_None : constant mh_eSupType := 3;
   mh_eSupType_Link : constant mh_eSupType := 4;
   mh_eSupType_Cycle : constant mh_eSupType := 4;
   mh_eSupType_u : constant mh_eSupType := 5;  -- rt_mh_net.h:132

   subtype mh_eMsg is unsigned;
   mh_eMsg_u_u : constant mh_eMsg := 0;
   mh_eMsg_ApplConnect : constant mh_eMsg := 1;
   mh_eMsg_ApplDisconnect : constant mh_eMsg := 2;
   mh_eMsg_ApplGetMsgInfo : constant mh_eMsg := 3;
   mh_eMsg_ApplMessage : constant mh_eMsg := 4;
   mh_eMsg_ApplReply : constant mh_eMsg := 5;
   mh_eMsg_ApplReturn : constant mh_eMsg := 6;
   mh_eMsg_Event : constant mh_eMsg := 8;
   mh_eMsg_HandlerDisconnect : constant mh_eMsg := 10;
   mh_eMsg_HandlerHello : constant mh_eMsg := 11;
   mh_eMsg_HandlerSync : constant mh_eMsg := 12;
   mh_eMsg_OutunitAck : constant mh_eMsg := 15;
   mh_eMsg_OutunitBlock : constant mh_eMsg := 16;
   mh_eMsg_OutunitDisconnect : constant mh_eMsg := 18;
   mh_eMsg_OutunitHello : constant mh_eMsg := 19;
   mh_eMsg_OutunitInfo : constant mh_eMsg := 20;
   mh_eMsg_OutunitSync : constant mh_eMsg := 21;
   mh_eMsg_OutunitClear : constant mh_eMsg := 22;
   mh_eMsg_ProcDown : constant mh_eMsg := 24;
   mh_eMsg_StopScanSup : constant mh_eMsg := 25;
   mh_eMsg_StartScanSup : constant mh_eMsg := 26;
   mh_eMsg_Sync : constant mh_eMsg := 27;
   mh_eMsg_u : constant mh_eMsg := 28;  -- rt_mh_net.h:143

   type mh_eOutunitType is 
     (mh_eOutunitType_u_u,
      mh_eOutunitType_Operator,
      mh_eOutunitType_Printer,
      mh_eOutunitType_File,
      mh_eOutunitType_Terminal,
      mh_eOutunitType_Logger,
      mh_eOutunitType_Post,
      mh_eOutunitType_SevHistEvents,
      mh_eOutunitType_u);
   pragma Convention (C, mh_eOutunitType);  -- rt_mh_net.h:170

   type mh_eSource is 
     (mh_eSource_u_u,
      mh_eSource_Scanner,
      mh_eSource_Application,
      mh_eSource_Handler,
      mh_eSource_Outunit,
      mh_eSource_Self,
      mh_eSource_Pcm,
      mh_eSource_u);
   pragma Convention (C, mh_eSource);  -- rt_mh_net.h:183

  --*
  -- * @ingroup MSGH_DS
  -- * @brief Defines a bit pattern. 
  -- *
  -- * @param mh_mEventFlags_Return Setting this flag enables a return message 
  -- * associated with this message to be shown in the event list. 
  -- * @param mh_mEventFlags_Ack Setting this flag enables an acknowledgement message 
  -- * associated with this message to be shown in the event list. 
  -- * @param mh_mEventFlags_Bell
  -- * @param mh_mEventFlags_Force
  -- * @param mh_mEventFlags_InfoWindow
  -- * @param mh_mEventFlags_Returned
  -- * @param mh_mEventFlags_NoObject
  --  

   subtype mh_mEventFlags is unsigned;
   mh_mEventFlags_Return : constant mh_mEventFlags := 1;
   mh_mEventFlags_Ack : constant mh_mEventFlags := 2;
   mh_mEventFlags_Bell : constant mh_mEventFlags := 4;
   mh_mEventFlags_Force : constant mh_mEventFlags := 8;
   mh_mEventFlags_InfoWindow : constant mh_mEventFlags := 16;
   mh_mEventFlags_Returned : constant mh_mEventFlags := 32;
   mh_mEventFlags_NoObject : constant mh_mEventFlags := 64;  -- rt_mh_net.h:209

  --*
  -- * @ingroup MSGH_DS
  -- * @brief Data describing supervision of an analog value 
  -- *
  -- * @param ActualValue The value of the supervised attribute at the 
  -- *                    time when the message was generated. 
  -- * @param CtrlLimit   The limit, at which a message will be generated. 
  -- * @param Hysteres    How much the supervised value will have to change before 
  -- *                    a return message will be issued. 
  -- * @param High        Indicates whether the message will be generated when the 
  -- *		       limit is exceeded (TRUE) or the value falls below it (FALSE).
  -- * @param Unit        A string representing the unit of the value. 
  --  

   type mh_sASupInfo is record
      ActualValue : aliased pwr_h.pwr_tFloat32;  -- rt_mh_net.h:234
      CtrlLimit : aliased pwr_h.pwr_tFloat32;  -- rt_mh_net.h:235
      Hysteres : aliased pwr_h.pwr_tFloat32;  -- rt_mh_net.h:236
      High : aliased pwr_h.pwr_tBoolean;  -- rt_mh_net.h:237
      Unit : aliased pwr_h.pwr_tString16;  -- rt_mh_net.h:238
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sASupInfo);  -- rt_mh_net.h:233

  --*
  -- * @ingroup MSGH_DS
  -- *
  -- * @brief Data describing supervision of a digital value 
  -- *
  -- * @param ActualValue The value of the supervised attribute at the time 
  -- *                    when the message was generated.
  -- * @param High        Indicates whether a high or a low value generates a message.
  --  

   type mh_sDSupInfo is record
      ActualValue : aliased pwr_h.pwr_tBoolean;  -- rt_mh_net.h:252
      High : aliased pwr_h.pwr_tBoolean;  -- rt_mh_net.h:253
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sDSupInfo);  -- rt_mh_net.h:251

  --*
  -- * @ingroup MSGH_DS 
  -- * @brief Data describing supervision data.
  -- * @param mh_uSubInfo_u Union that contains either mh_sASupInfo or mh_sDSupInfo.
  -- * @param mh_sASupInfo
  -- * @param mh_sDSupInfo
  --  

   type anon_149 (discr : unsigned := 0) is record
      case discr is
         when 0 =>
            A : aliased mh_sASupInfo;  -- rt_mh_net.h:265
         when others =>
            D : aliased mh_sDSupInfo;  -- rt_mh_net.h:266
      end case;
   end record;
   pragma Convention (C_Pass_By_Copy, anon_149);
   pragma Unchecked_Union (anon_149);
   type mh_uSupInfo is record
      SupType : aliased mh_eSupType;  -- rt_mh_net.h:264
      mh_uSupInfo_u : anon_149;  -- rt_mh_net.h:267
   end record;
   pragma Convention (C_Pass_By_Copy, mh_uSupInfo);  -- rt_mh_net.h:263

   function xdr_mh_uSupInfo return rpc_types_h.bool_t;  -- rt_mh_net.h:271
   pragma Import (C, xdr_mh_uSupInfo, "xdr_mh_uSupInfo");

   type mh_sHead is record
      xdr : aliased pwr_h.pwr_tBoolean;  -- rt_mh_net.h:275
      platform : aliased co_platform_h.co_sPlatform;  -- rt_mh_net.h:276
      ver : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:277
      source : aliased mh_eSource;  -- rt_mh_net.h:278
      birthTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:279
      c_type : aliased mh_eMsg;  -- rt_mh_net.h:280
      qid : aliased rt_qcom_h.qcom_sQid;  -- rt_mh_net.h:281
      nix : aliased pwr_h.pwr_tNodeIndex;  -- rt_mh_net.h:282
      outunit : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:283
      aid : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:284
      ackGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:285
      blockGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:286
      selGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:287
      eventGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:288
      eventIdx : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:289
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sHead);  -- rt_mh_net.h:274

   type mh_sOutunitAck is record
      ackGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:294
      targetIdx : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:295
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sOutunitAck);  -- rt_mh_net.h:293

   type mh_sOutunitBlock is record
      blockGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:300
      object : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:301
      outunit : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:302
      prio : aliased mh_eEventPrio;  -- rt_mh_net.h:303
      time : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:304
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sOutunitBlock);  -- rt_mh_net.h:299
